Fix height overflowing issue
- img to be background should be display: block

--- a/src/style.css
+++ b/src/style.css
@@ -115,8 +115,8 @@ footer {
     border-radius: 2rem;
     opacity: 70%;
     margin: auto;
-    margin-top: 15vh;
-    margin-bottom: 15vh;
+    margin-top: calc(var(--narrow-hero-height)/2);
+    margin-bottom: calc(var(--narrow-hero-height)/2);
     padding: calc(var(--gutter) * 2) calc(var(--gutter) * 3) calc(var(--gutter) * 3);
 }
 
@@ -148,6 +148,7 @@ footer {
 }
 
 #content[data-tab="home"] img.background {
+    display: block;
     height: calc(100vh - var(--header-height));
     width: 100%;
     object-fit: cover;
